--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 diffusers==0.25.0
-huggingface_hub==0.34.0
-transformers==4.34.0
+transformers==4.33.2
+huggingface_hub==0.17.3
+tokenizers==0.13.3
 torch>=2.0.0
 safetensors
 accelerate
